# telegram2notion

./: .gitignore  Dockerfile  docker-compose.yml  main.py  pyproject.toml
